Better button colors in onboarding form

--- a/src/components/Forms/FinallyMessage/style.module.less
+++ b/src/components/Forms/FinallyMessage/style.module.less
@@ -3,10 +3,12 @@
 .message {
   background: var(--secondary-color);
   color: var(--text-on-secondary-color);
-  --font-color: var(--text-on-secondary-color);
+  //--font-color: var(--text-on-secondary-color);
   --bg-color: var(--secondary-color);
-  --button-font-color: var(--text-on-secondary-color);
-  --button-bg-color: var(--secondary-color);
+  --button-font-color: var(--font-color);
+  --button-bg-color: var(--bg-color);
+  --button-hover-bg-color: var(--font-color);
+  --button-hover-font-color: var(--bg-color);
   padding: 1em;
   position: relative;
   z-index: 1;
