--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -46,10 +46,10 @@
     color: @white;
     --bg-color: @violet;
     --font-color: @white;
-    --secondary-color: @aqua;
-    --text-on-secondary-color: @white;
+    --secondary-color: @white;
+    --text-on-secondary-color: @black;
     --button-font-color: @white;
-    --button-bg-color: @white; // IE Fallback
+    --button-bg-color: @black; // IE Fallback
     --button-bg-color: @whiteTransparent;
     --button-hover-bg-color: @white;
     --button-hover-font-color: @violet;
@@ -60,9 +60,10 @@
     color: @white;
     --bg-color: @aqua;
     --font-color: @white;
-    --secondary-color: @violet;
-    --text-on-secondary-color: @white;
+    --secondary-color: @white;
+    --text-on-secondary-color: @black;
     --button-font-color: @white;
+    --button-bg-color: @black; // IE Fallback
     --button-bg-color: @whiteTransparent;
     --button-hover-bg-color: @white;
     --button-hover-font-color: @aqua;
@@ -76,6 +77,7 @@
     --secondary-color: @white;
     --text-on-secondary-color: @black;
     --button-font-color: @white;
+    --button-bg-color: @black; // IE Fallback
     --button-bg-color: @whiteTransparent;
     --button-hover-bg-color: @white;
     --button-hover-font-color: @red;
