--- a/src/components/Onboarding/SignUpFlow/style.module.less
+++ b/src/components/Onboarding/SignUpFlow/style.module.less
@@ -7,11 +7,15 @@
   background-color: @white;
   color: @black;
   --bg-color: @white;
-  --font-color: @black;
+  --font-color: @violet;
   --secondary-color: @white;
   --text-on-secondary-color: @black;
-  --button-font-color: @violet;
+  /*   --button-font-color: @violet;
   --button-bg-color: @violetTransparent;
   --button-hover-bg-color: @violet;
-  --button-hover-font-color: @white;
+  --button-hover-font-color: @white; */
+
+  .message {
+    background-color: lawngreen;
+  }
 }
