Signup Flow wording changes and small style fix

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -35,9 +35,7 @@
     h1,
     h2,
     h3 {
-      // Note: Check if that works
-      // color: @violet;
-      color: var(--secondary-color);
+      color: @violet;
     }
   }
 
