Extra sign up button for mobile intro text

--- a/src/components/IntroText/style.module.less
+++ b/src/components/IntroText/style.module.less
@@ -47,3 +47,11 @@
   display: flex;
   align-items: center;
 }
+
+.centerButton {
+  margin-bottom: 3rem;
+
+  @media (min-width: @breakPointM) {
+    display: none;
+  }
+}
