--- a/src/components/TickerToSignup/Ticker/style.module.less
+++ b/src/components/TickerToSignup/Ticker/style.module.less
@@ -107,3 +107,10 @@
     font-size: 5rem;
   }
 }
+
+.inviteHeadline {
+  margin: 1rem 0 0 0;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
