Nicer share button styles

--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -201,3 +201,17 @@
   display: flex;
   justify-content: space-between;
 }
+
+.municipalityShareContainer {
+  background-color: @aqua;
+
+  .shareButtonContainer {
+    background-color: transparent;
+    border: 3px solid @white;
+  }
+}
+
+.municipalityShare {
+  display: flex;
+  flex-wrap: wrap;
+}
