--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -122,6 +122,14 @@
   }
 
   @media (max-width: 1250px) {
+    font-size: 2.5rem;
+
+    &.mainCaptionHuge {
+      font-size: 2.5rem;
+    }
+  }
+
+  @media (max-width: 1100px) {
     font-size: 2.25rem;
 
     &.mainCaptionHuge {
