--- a/src/components/Municipality/MunicipalityMap/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/style.module.less
@@ -32,7 +32,7 @@
     background-image: url('./assets/map.png');
   }
   &.fallback {
-    background-image: url('./assets/map-full.jpg');
+    background-image: url('https://xbge-map-images.s3.eu-central-1.amazonaws.com/municipalityMap.png');
   }
 }
 
