--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -228,3 +228,69 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.previewCalloutContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 1rem;
+  margin-bottom: 3rem;
+  padding-top: 2rem;
+
+  @media (max-width: 1250px) {
+    margin-right: 0;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
+.previewElement {
+  width: 48%;
+
+  @media (max-width: 1250px) {
+    width: 100%;
+  }
+}
+
+.sharePreviewElement {
+  position: relative;
+  width: 48%;
+
+  @media (max-width: 1250px) {
+    width: 100%;
+  }
+}
+
+.sharingHands {
+  width: 90%;
+  height: auto;
+  margin-top: 2rem;
+}
+
+.previewSharing {
+  position: absolute;
+  top: -2rem;
+  right: 0;
+  width: 55%;
+  height: auto;
+  margin-top: 2rem;
+
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-name: gentleCheer;
+
+  @media (max-width: 1250px) {
+    padding: 1rem;
+  }
+}
+
+@keyframes gentleCheer {
+  0% {
+    transform: translateY(-1%) translateX(1%) rotate(-5deg);
+  }
+  50% {
+    transform: translateY(1%) translateX(-1%) rotate(-3deg);
+  }
+  100% {
+    transform: translateY(-1%) translateX(1%) rotate(-5deg);
+  }
+}
