Stylefix margins and width of share preview

--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -245,6 +245,7 @@
 
 .previewElement {
   width: 48%;
+  margin-bottom: 1rem;
 
   @media (max-width: 1250px) {
     width: 100%;
@@ -256,6 +257,10 @@
   width: 48%;
 
   @media (max-width: 1250px) {
+    width: 75%;
+  }
+
+  @media (max-width: 800px) {
     width: 100%;
   }
 }
