Insta-Share functionality updated, jumpmarker added, "use profile instead" option removed when no picture available

--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -229,6 +229,20 @@
   justify-content: space-between;
 }
 
+.previewCalloutContainerOnboarding {
+  display: flex;
+  justify-content: center;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  padding-top: 1rem;
+
+  @media (max-width: 1250px) {
+    margin-right: 0;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
 .previewCalloutContainer {
   display: flex;
   justify-content: space-between;
