Optionalizes ShareFeature Contentful dependencies

--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -247,8 +247,8 @@
   display: flex;
   justify-content: space-between;
   margin-right: 1rem;
-  margin-bottom: 3rem;
-  padding-top: 2rem;
+  margin-bottom: 1rem;
+  padding-top: 0.5rem;
 
   @media (max-width: 1250px) {
     margin-right: 0;
@@ -269,6 +269,7 @@
 .sharePreviewElement {
   position: relative;
   width: 48%;
+  margin-top: 2rem;
 
   @media (max-width: 1250px) {
     width: 75%;
@@ -300,6 +301,10 @@
   @media (max-width: 1250px) {
     padding: 1rem;
   }
+}
+
+.previewHeading {
+  margin: 0;
 }
 
 @keyframes gentleCheer {
