--- a/src/components/Layout/Header/StickyDonationBar/style.module.less
+++ b/src/components/Layout/Header/StickyDonationBar/style.module.less
@@ -11,7 +11,8 @@
 
 .donationBarItemContainer {
   display: flex;
-  justify-content: flex-end;
+  //justify-content: flex-end;
+  justify-content: center;
   width: @headerWidth;
   height: @headerHeight;
   margin: auto;
@@ -30,7 +31,7 @@
   margin: auto 1rem;
   margin-top: auto;
   margin-bottom: auto;
-  font-size: @DesktopFontSizeS;
+  font-size: @DesktopFontSizeM;
   padding-top: 0.25rem;
   color: @white;
 
