--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -2,8 +2,8 @@
 @inputWidth: 25rem;
 @inputButtonMargin: 0.4rem;
 
-
 .container {
+  width: 100%;
   color: @white;
   display: flex;
   flex-wrap: wrap;
@@ -19,8 +19,7 @@
 
 .inputContainer {
   position: relative;
-  width: @inputWidth;
-  // TODO: Check if ok for profile
+  width: 100%;
   margin-top: @inputButtonMargin;
   margin-bottom: @inputButtonMargin;
   color: var(--secondary-color);
@@ -37,6 +36,7 @@
 }
 
 .searchBar {
+  width: 100%;
   &:focus {
     outline: none;
     box-shadow: inset 0 0 0 @borderWidthThick @aqua;
