Updates sticky banner text and margin

--- a/src/components/Layout/style.module.less
+++ b/src/components/Layout/style.module.less
@@ -22,4 +22,16 @@
   @media (max-width: 303px) {
     margin-top: calc(@headerHeightS + @donationBarHeightS * 2.6);
   }
+
+  @media (max-width: 273px) {
+    margin-top: calc(@headerHeightS + @donationBarHeightS * 3);
+  }
+
+  @media (max-width: 231px) {
+    margin-top: calc(@headerHeightS + @donationBarHeightS * 4);
+  }
+
+  @media (max-width: 189px) {
+    margin-top: calc(@headerHeightS + @donationBarHeightS * 6);
+  }
 }
