Get qualified count from context

--- a/src/components/Layout/Header/StickyDonationBar/style.module.less
+++ b/src/components/Layout/Header/StickyDonationBar/style.module.less
@@ -6,6 +6,7 @@
 
 .donationBarItemContainer {
   display: flex;
+  min-height: @donationBarHeight;
   //justify-content: flex-end;
   justify-content: center;
   width: @headerWidth;
