--- a/src/components/Forms/ImageUpload/style.module.less
+++ b/src/components/Forms/ImageUpload/style.module.less
@@ -8,7 +8,7 @@
   transition: transform 0.3s;
   pointer-events: all;
 
-  &.default {
+  &.defaultSize {
     margin-top: 1rem;
     height: 5rem;
     width: 5rem;
@@ -49,7 +49,6 @@
   top: 8.5rem;
   left: 1rem;
   font-size: @DesktopFontSizeM;
-
 
   @media (max-width: @breakPointM) {
     transform: rotate(10deg);
@@ -100,7 +99,6 @@
     color: @white;
     background-color: @aqua;
   }
-
 }
 
 .buttonOnAquaBackground {
