--- a/src/components/utils/contentfulJsonToHtml.module.less
+++ b/src/components/utils/contentfulJsonToHtml.module.less
@@ -9,7 +9,7 @@
   font-family: inherit;
   background: transparent;
   border: none;
-  padding: 0;
+  padding: 0 3rem 0 0;
   margin: 0;
   cursor: pointer;
   font-size: @DesktopFontSizeL;
@@ -18,13 +18,12 @@
   position: relative;
   width: 100%;
 
-  @media (max-width: @breakPointM) {
-    margin-left: 2rem;
-  }
-
-  &:focus {
+  &:focus,
+  &:hover {
+    color: @violet;
     outline: none;
     text-decoration: underline;
+    background: transparent;
   }
 
   &:after {
@@ -37,12 +36,13 @@
     background-image: url('./plus.svg');
     background-size: contain;
     background-repeat: no-repeat;
-    transition: 0.3s cubic-bezier(0.47, 0.45, 0.57, 1.26);
+    //transition: 0.3s cubic-bezier(0.47, 0.45, 0.57, 1.26);
   }
 
   &.open {
     &:after {
       background-image: url('./minus.svg');
+      top: 0.7rem;
     }
   }
 }
@@ -85,5 +85,9 @@
 
   &:last-of-type {
     border-bottom: 1px solid @violet;
+  }
+
+  &:first-of-type {
+    margin-top: 2rem;
   }
 }
