icon name change

--- a/src/components/utils/contentfulJsonToHtml.module.less
+++ b/src/components/utils/contentfulJsonToHtml.module.less
@@ -33,7 +33,7 @@
     width: 1.2em;
     right: 0;
     top: 0rem;
-    background-image: url('./plus.svg');
+    background-image: url('./plus-icon.svg');
     background-size: contain;
     background-repeat: no-repeat;
     //transition: 0.3s cubic-bezier(0.47, 0.45, 0.57, 1.26);
@@ -41,7 +41,7 @@
 
   &.open {
     &:after {
-      background-image: url('./minus.svg');
+      background-image: url('./minus-icon.svg');
       top: 0.7rem;
     }
   }
