--- a/src/components/Layout/style.module.less
+++ b/src/components/Layout/style.module.less
@@ -1,6 +1,6 @@
 @import '../style/vars.less';
 
-.withoutDonationBar {
+.withoutStickyBanner {
   margin-top: @headerHeight;
 
   @media (max-width: @breakPointS) {
@@ -8,7 +8,7 @@
   }
 }
 
-.withDonationBar {
+.withStickyBanner {
   margin-top: calc(@headerHeight + @donationBarHeight);
 
   @media (max-width: 529px) {
