Fixes close-button margin

--- a/src/components/Layout/Header/StickyDonationBar/style.module.less
+++ b/src/components/Layout/Header/StickyDonationBar/style.module.less
@@ -11,7 +11,7 @@
   justify-content: space-between;
   width: @headerWidth;
   margin: auto;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
 
   @media (max-width: @breakPointXL) {
     width: 100%;
