--- a/src/components/Municipality/MunicipalityMapAndSearch/style.module.less
+++ b/src/components/Municipality/MunicipalityMapAndSearch/style.module.less
@@ -46,7 +46,7 @@
 .mapControlContainer {
   display: flex;
   flex-direction: column;
-  margin: 2rem 0;
+  // margin: 2rem 0;
   padding-left: 1rem;
 
   @media (max-width: @breakPointL) {
