--- a/src/components/Municipality/Leaderboard/style.module.less
+++ b/src/components/Municipality/Leaderboard/style.module.less
@@ -1,7 +1,8 @@
 @import '../../style/vars.less';
 
 .title {
-  text-align: left;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
 }
 
 .tableBody {
@@ -26,7 +27,7 @@
 }
 
 .pageSelectorElement {
-  padding: 1rem;
+  padding: 1rem 0.25rem;
   border: solid 1px white;
   cursor: pointer;
   flex-grow: 1;
@@ -46,4 +47,26 @@
   border-left: 3px solid #ddd;
   border-right: 3px solid #ddd;
   margin-bottom: 3rem;
+}
+
+.tabSelectorElement {
+  padding: 1rem 0.25rem;
+  border: solid 1px white;
+  cursor: pointer;
+  flex-grow: 1;
+  text-align: center;
+  &:hover {
+    background-color: @red;
+  }
+
+  &.activeTabSelector {
+    background-color: @aqua;
+  }
+}
+
+.tabSelectorContainer {
+  display: flex;
+  border-top: 3px solid #ddd;
+  border-left: 3px solid #ddd;
+  border-right: 3px solid #ddd;
 }
