--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -71,6 +71,7 @@
 .headline {
   margin-top: 0;
   margin-bottom: 1.5rem;
+  color: @white !important;
   @media (max-width: @breakPointM) {
     margin-top: 1.5rem;
   }
