SignatureForm now only once per user, removed campaign code from api call, seems not needed anymore

--- a/src/components/Forms/SelfScan/style.module.less
+++ b/src/components/Forms/SelfScan/style.module.less
@@ -72,15 +72,7 @@
 }
 
 .campaignVisualisations {
-  margin-top: 4rem;
-
-  @media (max-width: @breakPointM) {
-    margin-top: 2rem;
-  }
-}
-
-.campaignVisualisations {
-  padding: 1.5rem;
+  margin-top: 0;
 }
 
 .fieldContainer {
