Hertie-Crowdfunding Demo

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -65,6 +65,10 @@
   @media (max-width: @breakPointS) {
     font-size: @DesktopFontSizeS;
   }
+
+  &.crowdfunding {
+    color: var(--secondary-color);
+  }
 }
 
 .barGoalBarInbetweenLabel {
@@ -95,6 +99,10 @@
   position: absolute;
   height: 100%;
   border: 1px solid @white;
+
+  &.crowdfunding {
+    border: 1px solid var(--secondary-color);
+  }
 }
 
 .starts {
