--- a/src/components/Layout/style.module.less
+++ b/src/components/Layout/style.module.less
@@ -9,7 +9,7 @@
 }
 
 .withStickyBanner {
-  margin-top: calc(@headerHeight + @donationBarHeight);
+  margin-top: calc(@headerHeight + 11.5rem);
 
   @media (max-width: 529px) {
     margin-top: calc(@headerHeightS + @donationBarHeightS * 1.75);
