--- a/src/components/CrowdfundingInfo/style.module.less
+++ b/src/components/CrowdfundingInfo/style.module.less
@@ -15,3 +15,14 @@
   width: 47.5%;
   margin: 0;
 }
+
+.crowdfundingInfo {
+  margin: 2rem 0;
+  background: black;
+}
+
+.containerCTA {
+  margin: 2rem 0;
+  display: flex;
+  justify-content: center;
+}
