--- a/src/components/Layout/Header/StickyDonationBar/style.module.less
+++ b/src/components/Layout/Header/StickyDonationBar/style.module.less
@@ -95,6 +95,10 @@
   @media (max-width: @breakPointM) {
     font-size: @MobileFontSizeXL;
   }
+
+  @media (max-width: 417px) {
+    font-size: @MobileFontSizeL;
+  }
 }
 
 .crowdfundingDescription {
@@ -161,7 +165,15 @@
 
   @media (max-width: @breakPointL) {
     padding: 0.6rem 1rem 0.55rem;
+    font-size: @DesktopFontSizeS;
+  }
+
+  @media (max-width: @breakPointM) {
     font-size: @DesktopFontSizeM;
+  }
+
+  @media (max-width: @breakPointS) {
+    font-size: @DesktopFontSizeS;
   }
 }
 
@@ -176,6 +188,10 @@
 
   @media (max-width: @breakPointM) {
     font-size: @MobileFontSizeL;
+  }
+
+  @media (max-width: @breakPointS) {
+    font-size: @MobileFontSizeS;
   }
 }
 
