Text and button order changed

--- a/src/components/CrowdfundingInfo/style.module.less
+++ b/src/components/CrowdfundingInfo/style.module.less
@@ -3,7 +3,7 @@
 .contentContainer {
   display: flex;
   justify-content: space-between;
-  margin: 4rem 0;
+  margin: 4rem 0 2rem;
 
   @media (max-width: @breakPointL) {
     display: flex;
@@ -34,7 +34,7 @@
 }
 
 .containerCTA {
-  margin: 2rem 0;
+  margin: 2rem 0 3rem;
   display: flex;
   justify-content: center;
 }
