Load svgs with inline-svg-loader

--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -76,6 +76,13 @@
   height: 2rem;
   margin-top: 1rem;
 }
+.iconInstagram {
+  margin-right: 1rem;
+  margin-left: 1rem;
+  width: 2rem;
+  height: 2rem;
+  margin-top: 1rem;
+}
 
 .iconCorrection {
   margin-top: 0.5rem;
