--- a/src/components/Layout/Header/StickyDonationBar/hertieStyle.module.less
+++ b/src/components/Layout/Header/StickyDonationBar/hertieStyle.module.less
@@ -135,6 +135,9 @@
 .engageText {
   margin-top: 0.25rem;
   margin-right: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .crowdfundingCTA {
@@ -196,10 +199,9 @@
 }
 
 .arrowDown {
-  width: 1rem;
-  height: 1rem;
+  width: 1.15rem;
+  height: 1.15rem;
   margin-left: 0.5rem;
-  margin-top: 0.5rem;
 
   @media (max-width: @breakPointS) {
     margin: auto 0.25rem;
