--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -128,6 +128,15 @@
   width: 0.75rem;
   height: 0.75rem;
   margin-left: 0.3rem;
+  margin-bottom: 0.3rem;
+  cursor: pointer;
+  fill: @white;
+}
+
+.closeButtonBreadcrumb {
+  width: 0.75rem;
+  height: 0.75rem;
+  margin-left: 45%;
   cursor: pointer;
   fill: @white;
 }
