Better leaderboard styling

--- a/src/components/Municipality/Leaderboard/style.module.less
+++ b/src/components/Municipality/Leaderboard/style.module.less
@@ -7,20 +7,30 @@
 
 .tableBody {
   border-collapse: collapse;
-  border-top: 3px solid #ddd;
-  border-right: 3px solid #ddd;
-  border-left: 3px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-left: 1px solid #ddd;
   width: 100%;
 
   &.tableBody td,
   &.tableBody th {
-    border: 1px solid #ddd;
     padding: 8px;
     padding-top: 12px;
     padding-bottom: 12px;
   }
   &.tableBody th {
     border-bottom: 1px solid #ddd;
+  }
+  &.tableBody tr {
+    border: none;
+  }
+}
+
+.tableRow {
+  background: white;
+  color: black;
+  &:nth-child(even) {
+    background: black;
+    color: white;
   }
 }
 
@@ -29,7 +39,7 @@
 }
 
 .pageSelectorElement {
-  padding: 0.75rem 0.25rem 0.5rem;
+  padding: 0.5rem 0.25rem 0.25rem;
   cursor: pointer;
   flex-grow: 1;
   text-align: center;
@@ -45,9 +55,9 @@
 
 .pageSelectorContainer {
   display: flex;
-  border-bottom: 3px solid #ddd;
-  border-left: 3px solid #ddd;
-  border-right: 3px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
   margin-bottom: 3rem;
 }
 
@@ -56,6 +66,7 @@
   border-top: 1px solid lightgrey;
   border-left: 1px solid lightgrey;
   border-right: 1px solid lightgrey;
+  border-bottom: 1px solid #ddd;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   color: lightgrey;
@@ -67,12 +78,12 @@
   }
 
   &.activeTabSelector {
-    background-color: @aqua;
     color: white;
-    padding: calc(1rem - 3px) 0.25rem 0.7rem;
-    border-top: 3px solid #ddd;
-    border-left: 3px solid #ddd;
-    border-right: 3px solid #ddd;
+    padding: calc(1rem - 1px) 0.25rem 0.7rem;
+    border-top: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: none;
     font-weight: 1000;
   }
 }
