--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -9,6 +9,7 @@
 @greyMedium: #dedede;
 @white: white;
 @black: black;
+@violetLight: #ae9fff;
 
 @violetTransparent: rgba(120, 95, 255, 0.2);
 @whiteTransparent: rgba(255, 255, 255, 0.2);
