--- a/src/components/Municipality/Leaderboard/style.module.less
+++ b/src/components/Municipality/Leaderboard/style.module.less
@@ -35,7 +35,8 @@
 
 .tableHead {
   text-align: left;
-  background: @aqua;
+  background: @white;
+  color: @violet;
 
   &:last-child {
     text-align: right;
@@ -53,7 +54,8 @@
   }
 
   &.activePageSelector {
-    background-color: @aqua;
+    background: @white;
+    color: @violet;
   }
 }
 
@@ -83,14 +85,14 @@
   }
 
   &.activeTabSelector {
-    color: white;
     padding: calc(1rem - 1px) 0.25rem 0.7rem;
     border-top: 1px solid #ddd;
 
     border-right: 1px solid #ddd;
     border-bottom: none;
     font-weight: 1000;
-    background: @aqua;
+    background: @white;
+    color: @violet;
   }
 
   &:nth-child(1) {
