--- a/src/components/Municipality/Leaderboard/style.module.less
+++ b/src/components/Municipality/Leaderboard/style.module.less
@@ -2,7 +2,7 @@
 
 .title {
   margin-top: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .tableBody {
@@ -73,9 +73,9 @@
 
   border-right: 1px solid lightgrey;
   border-bottom: 1px solid #ddd;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  color: lightgrey;
+  // border-top-left-radius: 10px;
+  // border-top-right-radius: 10px;
+  color: @white;
   cursor: pointer;
   flex-grow: 1;
   text-align: center;
