Focus on upload image input after sign up

--- a/src/components/Forms/ImageUpload/style.module.less
+++ b/src/components/Forms/ImageUpload/style.module.less
@@ -1,4 +1,5 @@
 @import '../../style/vars.less';
+
 .imageUploadContainer {
   margin-bottom: 2rem;
 }
@@ -25,15 +26,38 @@
   }
 }
 
+/*
+ * Hide only visually, but have it available for screen readers:
+ * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+ *
+ * 1. For long content, line feeds are not interpreted as spaces and small width
+ *    causes content to wrap 1 word per line:
+ *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
+ */
+
 .avatarUploadButton {
-  visibility: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(50%);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
   position: absolute;
+  width: 1px;
+  white-space: nowrap; /* 1 */
 }
 
 .avatarImageContainer {
   position: relative;
   cursor: pointer;
   pointer-events: none;
+
+  &:focus-within {
+    border: 1px solid @violet;
+    border-radius: 50%;
+  }
 
   &:hover {
     .avatarImage {
@@ -49,7 +73,6 @@
   top: 8.5rem;
   left: 1rem;
   font-size: @DesktopFontSizeM;
-
 
   @media (max-width: @breakPointM) {
     transform: rotate(10deg);
@@ -100,7 +123,6 @@
     color: @white;
     background-color: @aqua;
   }
-
 }
 
 .buttonOnAquaBackground {
