--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -78,14 +78,32 @@
   background-color: white;
 }
 
+.backdrop {
+  position: fixed;
+  z-index: 1040;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+}
+
+.modalStyle {
+  position: fixed;
+  width: 70%;
+  z-index: 1040;
+  top: 5%;
+  left: 15%;
+}
+
 /* if backdrop support: very transparent and blurred */
 @supports (
   (-webkit-backdrop-filter: blur(35px)) or (backdrop-filter: blur(35px))
 ) {
   .backdropBlur {
-    background-color: rgba(255, 255, 255, 0.5);
-    -webkit-backdrop-filter: blur(35px);
-    backdrop-filter: blur(35px);
+    background-color: rgb(31, 30, 30);
+    opacity: 0.5;
   }
 }
 
