Changed hertie banner  to hopefully celebrate victory

--- a/src/components/Layout/Header/StickyDonationBar/hertieStyle.module.less
+++ b/src/components/Layout/Header/StickyDonationBar/hertieStyle.module.less
@@ -120,7 +120,7 @@
 }
 .rightSection {
   width: 47.5%;
-  margin-top: 2rem;
+  align-self: center;
 
   @media (max-width: @breakPointM) {
     width: 95%;
