--- a/src/components/Layout/Header/StickyDonationBar/hertieStyle.module.less
+++ b/src/components/Layout/Header/StickyDonationBar/hertieStyle.module.less
@@ -12,6 +12,7 @@
   --button-bg-color: @whiteTransparent;
   --button-hover-bg-color: @white;
   --button-hover-font-color: @red;
+  overflow: hidden;
 }
 
 .donationBarItemContainer {
@@ -120,7 +121,7 @@
 }
 .rightSection {
   width: 47.5%;
-  margin-top: 2rem;
+  align-self: center;
 
   @media (max-width: @breakPointM) {
     width: 95%;
@@ -218,7 +219,8 @@
 }
 
 .visualisationForDesktop {
-  display: block;
+  display: flex;
+  justify-content: center;
 
   @media (max-width: @breakPointM) {
     display: none;
@@ -227,4 +229,10 @@
 
 .hidden {
   display: none;
+}
+
+.crowd {
+  position: absolute;
+  bottom: -20%;
+  height: 100%;
 }
